--- a/trunk/src/eepskye/src/modeledit.ui
+++ b/trunk/src/eepskye/src/modeledit.ui
@@ -41,7 +41,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>7</number>
+      <number>10</number>
      </property>
      <widget class="QWidget" name="tabModelSetup">
       <attribute name="title">
@@ -90,6 +90,20 @@
            </property>
            <property name="value">
             <number>260</number>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_256">
+           <property name="text">
+            <string>Model Image</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="modelImageLE">
+           <property name="maxLength">
+            <number>10</number>
            </property>
           </widget>
          </item>
@@ -1253,7 +1267,13 @@
            <property name="minimumSize">
             <size>
              <width>80</width>
-             <height>0</height>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>35</height>
             </size>
            </property>
            <property name="whatsThis">
@@ -1323,13 +1343,6 @@ p, li { white-space: pre-wrap; }
           <widget class="QCheckBox" name="switchDefPos_2">
            <property name="text">
             <string>RUD</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="9">
-          <widget class="QCheckBox" name="switchDefPos_1">
-           <property name="text">
-            <string>THR</string>
            </property>
           </widget>
          </item>
@@ -1816,6 +1829,104 @@ p, li { white-space: pre-wrap; }
              <string>SF</string>
             </property>
            </widget>
+          </widget>
+         </item>
+         <item row="0" column="9">
+          <widget class="QCheckBox" name="switchDefPos_1">
+           <property name="text">
+            <string>THR</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="9">
+          <widget class="QCheckBox" name="EnThr">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="11">
+          <widget class="QCheckBox" name="EnRud">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="13">
+          <widget class="QCheckBox" name="EnEle">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="15">
+          <widget class="QCheckBox" name="EnAil">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="19">
+          <widget class="QCheckBox" name="EnIdx">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="22">
+          <widget class="QCheckBox" name="EnGea">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="10">
+          <widget class="QCheckBox" name="EnA">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="12">
+          <widget class="QCheckBox" name="EnB">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="14">
+          <widget class="QCheckBox" name="EnC">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="16">
+          <widget class="QCheckBox" name="EnD">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="23">
+          <widget class="QCheckBox" name="EnE">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="24">
+          <widget class="QCheckBox" name="EnF">
+           <property name="text">
+            <string>En</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="25">
+          <widget class="QCheckBox" name="EnG">
+           <property name="text">
+            <string>En</string>
+           </property>
           </widget>
          </item>
         </layout>
@@ -12272,6 +12383,9 @@ Right</string>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <layout class="QGridLayout" name="gridLayout_22">
+         <property name="leftMargin">
+          <number>5</number>
+         </property>
          <item row="1" column="1" colspan="2">
           <layout class="QGridLayout" name="gridLayout_21">
            <item row="0" column="0">
@@ -12439,6 +12553,9 @@ Right</string>
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_23">
+         <property name="leftMargin">
+          <number>5</number>
+         </property>
          <item row="0" column="0">
           <widget class="QLabel" name="label_110">
            <property name="text">
@@ -12606,6 +12723,9 @@ Right</string>
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_16">
+         <property name="leftMargin">
+          <number>5</number>
+         </property>
          <item row="0" column="0">
           <widget class="QLabel" name="label_122">
            <property name="maximumSize">
@@ -12846,14 +12966,14 @@ Right</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="3">
+         <item row="2" column="4">
           <widget class="QSpinBox" name="frsky_RxV_ratio">
            <property name="maximum">
             <number>255</number>
            </property>
           </widget>
          </item>
-         <item row="0" column="3">
+         <item row="0" column="4">
           <widget class="QSpinBox" name="frsky_RSSI_Warn">
            <property name="minimum">
             <number>15</number>
@@ -12863,7 +12983,7 @@ Right</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="3">
+         <item row="1" column="4">
           <widget class="QSpinBox" name="frsky_RSSI_Critical">
            <property name="minimum">
             <number>12</number>
@@ -12873,7 +12993,7 @@ Right</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="4">
+         <item row="0" column="5">
           <widget class="QLabel" name="label_194">
            <property name="maximumSize">
             <size>
@@ -12886,7 +13006,7 @@ Right</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="5">
+         <item row="0" column="6">
           <widget class="QCheckBox" name="RssiWarnEnabled">
            <property name="maximumSize">
             <size>
@@ -12902,7 +13022,7 @@ Right</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="4">
+         <item row="1" column="5">
           <widget class="QLabel" name="label_195">
            <property name="maximumSize">
             <size>
@@ -12915,7 +13035,7 @@ Right</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="5">
+         <item row="1" column="6">
           <widget class="QCheckBox" name="RssiCriticalEnabled">
            <property name="maximumSize">
             <size>
@@ -12931,10 +13051,20 @@ Right</string>
            </property>
           </widget>
          </item>
+         <item row="5" column="3">
+          <widget class="QCheckBox" name="InvertCom1CB">
+           <property name="text">
+            <string>Invert COM 1</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_25" columnstretch="0,0,0,0,0,0,0,0,0">
+         <property name="leftMargin">
+          <number>5</number>
+         </property>
          <item row="1" column="0">
           <widget class="QLabel" name="label_86">
            <property name="text">
@@ -13125,6 +13255,9 @@ Right</string>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <property name="leftMargin">
+          <number>5</number>
+         </property>
          <item>
           <widget class="QLabel" name="label_178">
            <property name="maximumSize">
@@ -16486,6 +16619,16 @@ Right</string>
          <string>Dec/Zero</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Inc/Lim</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dec/Lim</string>
+        </property>
+       </item>
       </widget>
       <widget class="QComboBox" name="Adj2FunctionCB">
        <property name="geometry">
@@ -16529,6 +16672,16 @@ Right</string>
        <item>
         <property name="text">
          <string>Dec/Zero</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Inc/Lim</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dec/Lim</string>
         </property>
        </item>
       </widget>
@@ -16576,6 +16729,16 @@ Right</string>
          <string>Dec/Zero</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Inc/Lim</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dec/Lim</string>
+        </property>
+       </item>
       </widget>
       <widget class="QComboBox" name="Adj4FunctionCB">
        <property name="geometry">
@@ -16619,6 +16782,16 @@ Right</string>
        <item>
         <property name="text">
          <string>Dec/Zero</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Inc/Lim</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dec/Lim</string>
         </property>
        </item>
       </widget>
@@ -16666,6 +16839,16 @@ Right</string>
          <string>Dec/Zero</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Inc/Lim</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dec/Lim</string>
+        </property>
+       </item>
       </widget>
       <widget class="QComboBox" name="Adj6FunctionCB">
        <property name="geometry">
@@ -16709,6 +16892,16 @@ Right</string>
        <item>
         <property name="text">
          <string>Dec/Zero</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Inc/Lim</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dec/Lim</string>
         </property>
        </item>
       </widget>
@@ -16756,6 +16949,16 @@ Right</string>
          <string>Dec/Zero</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Inc/Lim</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dec/Lim</string>
+        </property>
+       </item>
       </widget>
       <widget class="QComboBox" name="Adj8FunctionCB">
        <property name="geometry">
@@ -16799,6 +17002,16 @@ Right</string>
        <item>
         <property name="text">
          <string>Dec/Zero</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Inc/Lim</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dec/Lim</string>
         </property>
        </item>
       </widget>
